// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render correctly as not required label 1`] = `
<DocumentFragment>
  <label
    class="_label_c20562"
    for="test-input-id"
  >
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly as required label 1`] = `
<DocumentFragment>
  <label
    class="_label_c20562"
    for="test-input-id"
  >
    <span>
      Test label
      <abbr
        title="required"
      >
        *
      </abbr>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render correctly without text 1`] = `
<DocumentFragment>
  <label
    class="_label_c20562"
    for="test-input-id"
  />
</DocumentFragment>
`;

exports[`Label > should render left icon 1`] = `
<DocumentFragment>
  <label
    class="_label_c20562"
    for="test-input-id"
  >
    <svg
      class="_icon_3b2ece"
      fill="currentColor"
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M328 112L184 256l144 144"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="48"
      />
    </svg>
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;

exports[`Label > should render right icon 1`] = `
<DocumentFragment>
  <label
    class="_label_c20562"
    for="test-input-id"
  >
    <svg
      class="_icon_3b2ece"
      fill="currentColor"
      height="1em"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M184 112l144 144-144 144"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="48"
      />
    </svg>
    <span>
      Test label
    </span>
  </label>
</DocumentFragment>
`;
